--- a/index.html
+++ b/index.html
@@ -638,6 +638,7 @@
                <li><a href='https://deepmind.com/'>DeepMind</a></li>
                <li><a href='https://ai.facebook.com/blog'>Facebook AI</a></li>
                <li><a href='https://openai.com/'>OpenAI</a></li>
+               <li><a href='https://distill.pub/about/'>Distill</a> ML research</li>
                <li><a href='http://aiweekly.co/'>AIWeekly</a></li>
                <li><a href='https://www.coursera.org/in-progress'>Coursera</a></li>
                <li><a href="https://zenhabits.net/">Zen Habits</a></li>
@@ -645,6 +646,11 @@
 
          </div>
          <div id="go_people" style="display:none;">
+            <ul>
+               <li>Andrej Karpathy <a href='https://karpathy.ai/'>Tesla</a> Computer vision in Autonomous vehicles</li>
+               <li>Satinder Singh <a href='https://web.eecs.umich.edu/~baveja/'>UMich</a> Reinforcement learning</li>
+               <li>Christopher Olah <a href='https://colah.github.io/about.html'>OpenAI</a> Feature Visualization</li>
+            </ul>
             <ul>
                <li>Bobby Fischer</li>
             </ul>
