--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <ol>
                <li>CNN for sentence classification <a href="https://arxiv.org/pdf/1408.5882.pdf">here</a></li>
                <li>NIPS series - 2 hours : 1:06:46<a href="https://videos.neurips.cc/">here</a></li>
-               <li>Deep learning 5th module <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
+               <li>Deep learning 5th module [Pending : 5.3, 44.44 video time stamp] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
                <li>Implement BiLSTM <a href='https://pytorch.org/tutorials/beginner/nlp/advanced_tutorial.html'>Tensorflow</a></li>
                <li>Harsha Coursera thing - week 4</li>
                <li>Back propogation through time <a href='http://www.wildml.com/2015/10/recurrent-neural-networks-tutorial-part-3-backpropagation-through-time-and-vanishing-gradients/'>sample</a></li>
