--- a/index.html
+++ b/index.html
@@ -170,14 +170,12 @@
                <li>CNN for sentence classification <a href="https://arxiv.org/pdf/1408.5882.pdf">here</a></li>
                <li>NIPS series - 2 hours : 1:06:46<a href="https://videos.neurips.cc/">here</a></li>
                <li>Deep learning 5th module [Pending : 5.3, 44.44 video time stamp] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
-               <li>Implement BiLSTM <a href='https://pytorch.org/tutorials/beginner/nlp/advanced_tutorial.html'>Tensorflow</a></li>
                <li>Harsha Coursera thing - week 4</li>
                <li>Back propogation through time <a href='http://www.wildml.com/2015/10/recurrent-neural-networks-tutorial-part-3-backpropagation-through-time-and-vanishing-gradients/'>sample</a></li>
                <li>Deep learning Chapter 5</li>
                <li>Get caught up with OS and quiz</li>
                <li>[IMP Research Paper] Deep Residual Networks for Image Recognition<a href="https://arxiv.org/pdf/1512.03385.pdf">here</a></li>
-               <li>CNN Stanford course<a href="https://www.youtube.com/watch?v=h7iBpEHGVNc&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=3"> lect-3 [56min]</a></li>
-               <li>TA work</li>
+               <li>CNN Stanford course lect-4 <a href="https://www.youtube.com/watch?v=d14TUNcbn1k&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=4">[56min]</a></li>
                <li>Study Ch 3 from Intro to Statistical Learning book.</li>
                <li>[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture <a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[1:30min]</a></li>
                <li>Implement code of the paper you read Image generation [DRAW and Audio to video]</li>
