--- a/index.html
+++ b/index.html
@@ -560,8 +560,16 @@
                   <li>Emily Dickinson</li>
                   <li>Dorothy Osbourne</li>
                   <li>Anne Finch</li>
-                  <li>!!!!!!!!&&&&&&&&!!!!!!!!</li>
+                  <li>!!!!!!!!Behavioural Economists!!!!!!!!</li>
+                  <li> Daniel Kahneman </li>
+                  <li> Dan Ariely </li>
+                  <li> Bruno Frey </li>
+                  <li> Steven Pinker </li>
+                  <li> Daniel Goleman </li>
+                  <li> Paul Ekman </li>
+                  <li> Richard Thaler </li>
                   <li>Stuart Kauffman</li>
+                  <li>!!!!!!!!&&&&&&&&!!!!!!!!</li>
                   <li>steven johnson</li>
                   <li>Malcolm Gladwell</li>
                   <li>Pushkin</li>
