--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
-               <li>Deep learning 5th module [Pending : 5.3, 44.44 video time stamp] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
+               <li>Deep learning 5th module [Experiment with code from practicum] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
                <li>[IMP Research Paper] Deep Residual Networks for Image Recognition<a href="https://arxiv.org/pdf/1512.03385.pdf">here</a></li>
                <li>NIPS series - 2 hours : 1:06:46<a href="https://videos.neurips.cc/">here</a></li>
                <li>CNN Stanford course lect-4 <a href="https://www.youtube.com/watch?v=d14TUNcbn1k&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=4">[56min]</a></li>
