--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <ol>
                <li>Deep learning 5th module [Experiment with code from practicum] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
                <li>[IMP Research Paper] Deep Residual Networks for Image Recognition<a href="https://arxiv.org/pdf/1512.03385.pdf">here</a></li>
-               <li>NIPS series - 2 hours : 1:06:46<a href="https://videos.neurips.cc/">here</a></li>
+               <li>NIPS series - Yoshua Bengio<a href="https://videos.neurips.cc/topic/deep%20learning/video/slideslive-38922794">here</a></li>
                <li>CNN Stanford course lect-4 <a href="https://www.youtube.com/watch?v=d14TUNcbn1k&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=4">[56min]</a></li>
                <br>
                <li>How to train your <a href='https://myrtle.ai/learn/how-to-train-your-resnet-7-batch-norm/'>Resnet-7</a></li>
