--- a/index.html
+++ b/index.html
@@ -160,14 +160,15 @@
       <div id="Deadlines" class="tabcontent box">
 
          <div class="sidenav">
-            <a href="#" onclick="today()">September 5 2020</a>
+            <a href="#" onclick="today()">September 6 2020</a>
             <a href="#" onclick="yesterday()">August 2020</a>
             <a href="#" onclick="projectsNow()">Growing work</a>
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
-               <li>Deep learning 5th module [Experiment with code from practicum] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
+               <li>Deep learning wtih Pytorch book Chapter 1</li>
+               <li>Deep learning 5th module [Experiment with code from practicum-Revision] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
                <li>[IMP Research Paper] Deep Residual Networks for Image Recognition<a href="https://arxiv.org/pdf/1512.03385.pdf">here</a></li>
                <li>NIPS series - Yoshua Bengio<a href="https://videos.neurips.cc/topic/deep%20learning/video/slideslive-38922794">here</a></li>
                <li>CNN Stanford course lect-4 <a href="https://www.youtube.com/watch?v=d14TUNcbn1k&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=4">[56min]</a></li>
