--- a/index.html
+++ b/index.html
@@ -286,6 +286,8 @@
             <h5>Revolutionary Deep Networks</h5>
             <p>U-Net for Bomedical Image Segmentation <a href="https://lmb.informatik.uni-freiburg.de/resources/software.php">Vision lab</a></p>
          </br>
+            <h5>Image Synthesis [Generative models]</h5>
+            <p>Markovian Generative Adversarial Network for Pre-computed texture synthesis <a href='https://arxiv.org/pdf/1604.04382.pdf'>here</a></p>
          </br>
             <h5>Image to text synthesis</h5>
             <p>Show and tell : A neural image caption generator <a href="https://arxiv.org/pdf/1411.4555.pdf">here</a></p>
