--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
             <p>U-Net for Bomedical Image Segmentation <a href="https://lmb.informatik.uni-freiburg.de/resources/software.php">Vision lab</a></p>
          </br>
             <h5>Image Synthesis [Generative models]</h5>
+            <p>Combining MRF and CNN for image synthesis <a href='https://arxiv.org/pdf/1601.04589.pdf'>here</a></p>
             <p>Markovian Generative Adversarial Network for Pre-computed texture synthesis <a href='https://arxiv.org/pdf/1604.04382.pdf'>here</a></p>
          </br>
             <h5>Image to text synthesis</h5>
