--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                <li>[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture <a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[1:30min]</a></li>
                <li>Deep learning Chapter 5</li>
                <li>Get caught up with OS and quiz</li>
-               <li> Start computer vision book</li>
+               <li> Start computer vision book[Computer vision : Models, learning and inference]</li>
                <br>
                <li>Harsha Coursera thing - week 4</li>
                <li>Implement code of the paper you read Image generation [DRAW and Audio to video]</li>
