--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
-               <li>Deep learning wtih Pytorch book Chapter 1</li>
+               <li>Deep learning wtih Pytorch book Chapter 2 [Continue from 2.2]</li>
                <li>Deep learning 5th module [Experiment with code from practicum-Revision] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
                <li>[IMP Research Paper] Deep Residual Networks for Image Recognition<a href="https://arxiv.org/pdf/1512.03385.pdf">here</a></li>
                <li>NIPS series - Yoshua Bengio<a href="https://videos.neurips.cc/topic/deep%20learning/video/slideslive-38922794">here</a></li>
