--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
          </div>
 
          <div id="unitopic" style="display:none">
+            <h4>High level topic : </h4>
+            <p>Feature visualization with Lucid <a href='https://distill.pub/2017/feature-visualization/'>here</a></p>
             <h4>Topic in hand : Support Vector Machines(Types of Kernels : RBF)</h4>
             <h4>Next in hand : Naive Bayes</h4>
             <h3 style="color:black">Unique Topics</h3>
