--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <a href="#" onclick="rsrch_pap()">research_papers</a>
             <a href="#" onclick="art_pap()">interesting_articles</a>
             <a href="#" onclick="math_concpt()">Math concepts/Perspective</a>
-            <a href="#" onclick="inter_prep()">Interview Preparation</a>
+            <a href="#" onclick="fellow_prep()">Fellow ships</a>
          </div>
 
          <div id="unitopic" style="display:none">
@@ -288,16 +288,16 @@
          <div id="rsrch_pprs" style="display:none;">
             <h5>Revolutionary Deep Networks</h5>
             <p>U-Net for Bomedical Image Segmentation <a href="https://lmb.informatik.uni-freiburg.de/resources/software.php">Vision lab</a></p>
-         </br>
+            <br>
             <h5>Image Synthesis [Generative models]</h5>
             <p>Combining MRF and CNN for image synthesis <a href='https://arxiv.org/pdf/1601.04589.pdf'>here</a></p>
             <p>Markovian Generative Adversarial Network for Pre-computed texture synthesis <a href='https://arxiv.org/pdf/1604.04382.pdf'>here</a></p>
-         </br>
+            <br>
             <h5>Image to text synthesis</h5>
             <p>Show and tell : A neural image caption generator <a href="https://arxiv.org/pdf/1411.4555.pdf">here</a></p>
             <p>Deep visual-semantic Alignments for generating Image Descriptions(Fei Fei Li, Karpathy) <a href="https://cs.stanford.edu/people/karpathy/cvpr2015.pdf">here</a></p>
             <p>Show, attens and tell : A neural image caption generation with visual attention <a href="https://arxiv.org/pdf/1502.03044.pdf">here</a></p>
-         </br>
+            <br>
             <h5>Image and Video Synthesis</h5>
             <p>Synthesizing talking faces from Audio <a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01150-y.pdf">here</a></p>
             <p>Segmentation of moving objects by long term Video Analysis <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6682905">here</a></p>
@@ -359,10 +359,9 @@
          </div>
 
          <div id="interprep" style="display:none; align=left; color:black;">
-            <h3>Part 1:</h3>
-            <h3>Machine Learning Algorithms<a href="https://github.com/ShuaiW/ml-interview">Github Link</a></h3>
-            <h3>Part 2:</h3>
-            <h3>Python and SQL language prep (Python Book)</h3>
+            <ol>
+               <li> Facebook fellowship <a href='https://research.fb.com/fellowship/'>here</a></li>
+            </ol>
          </div>
       </div>
 
