--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
       <!--         Head Area         -->
       <div id="headArea" class="tabcontent box">
          <div class="sidenav">
+            <a href="#" onclick="chalConcepts()">challenging_concepts</a>
             <a href="#" onclick="exterSources()">external_resources</a>
             <a href="#" onclick="corbooks()">acad_books</a>
             <a href="#" onclick="uni_topic()">Unique Topics</a>
@@ -222,6 +223,13 @@
             <a href="#" onclick="art_pap()">interesting_articles</a>
             <a href="#" onclick="math_concpt()">Math concepts/Perspective</a>
             <a href="#" onclick="fellow_prep()">Fellow ships</a>
+         </div>
+
+         <div id="chalcon" style="display:none">
+            <ul>
+               <li>Deep vision conference 2020 <a href='https://sites.google.com/view/deepvision2020/program?fbclid=IwAR1C9oKlYKguNHL089BYp_tmsRdu2G-GXcrhf7P120SwuBBg0GepnfrKmZQ'>here</a></li>
+               <li>NIPS video <a href='https://videos.neurips.cc/'>here</a></li>
+            </ul>
          </div>
 
          <div id="unitopic" style="display:none">
