--- a/index.html
+++ b/index.html
@@ -160,13 +160,14 @@
       <div id="Deadlines" class="tabcontent box">
 
          <div class="sidenav">
-            <a href="#" onclick="today()">September 6 2020</a>
+            <a href="#" onclick="today()">September 12 2020</a>
             <a href="#" onclick="yesterday()">August 2020</a>
             <a href="#" onclick="projectsNow()">Growing work</a>
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
+               <li>Workout plan for coming week</li>
                <li>Deep learning wtih Pytorch book Chapter 2 [Continue from 2.2]</li>
                <li>Deep learning 5th module [Experiment with code from practicum-Revision] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
                <li>[IMP Research Paper] Deep Residual Networks for Image Recognition<a href="https://arxiv.org/pdf/1512.03385.pdf">here</a></li>
