--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
-               <li>Workout plan for coming week</li>
+               <li>Workout : back</li>
+               <li>OpSys Assignment and reading material</li>
+               <li>Think about Adv Data Analytics Project</li>
+
                <li>Deep learning wtih Pytorch book Chapter 2 [Continue from 2.2]</li>
                <li>Deep learning 5th module [Experiment with code from practicum-Revision] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
                <li>[IMP Research Paper] Deep Residual Networks for Image Recognition<a href="https://arxiv.org/pdf/1512.03385.pdf">here</a></li>
