--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
+               <li><h1>BREATHE : Inhale and Exhale</h1></li>
                <li>Workout : back</li>
                <li>OpSys Assignment and reading material</li>
                <li>Think about Adv Data Analytics Project</li>
