--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
          </div>
          <div id="rsrch_pprs" style="display:none;">
             <h5>Revolutionary Deep Networks</h5>
+            <p>Deep dive into Recurrent Neural Networks <a href='http://nikhilbuduma.com/2015/01/11/a-deep-dive-into-recurrent-neural-networks/?fbclid=IwAR2zkMSFzx09WvCEWP8ViLZOZsslboStl5evc5wK7W-QH5dk3esVHgoooJ0'>here</a></p>
             <p>U-Net for Bomedical Image Segmentation <a href="https://lmb.informatik.uni-freiburg.de/resources/software.php">Vision lab</a></p>
 
             <br>
