--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
          </div>
          <div id="rsrch_pprs" style="display:none;">
             <h5>Revolutionary Deep Networks</h5>
+            <p>Unsupervised metalearning : Learning to learn without supervision <a href='https://blog.ml.cmu.edu/2020/05/01/unsupervised-meta-learning-learning-to-learn-without-supervision/'>here</a></p>
             <p>Deep dive into Recurrent Neural Networks <a href='http://nikhilbuduma.com/2015/01/11/a-deep-dive-into-recurrent-neural-networks/?fbclid=IwAR2zkMSFzx09WvCEWP8ViLZOZsslboStl5evc5wK7W-QH5dk3esVHgoooJ0'>here</a></p>
             <p>U-Net for Bomedical Image Segmentation <a href="https://lmb.informatik.uni-freiburg.de/resources/software.php">Vision lab</a></p>
 
@@ -310,6 +311,8 @@
             <p>Identity mappings in Deep Residual Networks <a href='https://arxiv.org/pdf/1603.05027.pdf'>here</a></p>
             <br>
             <h5>Image Synthesis [Generative models]</h5>
+            <p>Real time Image rendering <a href='https://www.youtube.com/watch?v=tMtMneugt0A&ab_channel=Hardwareluxx'>here</a></p>
+            <p>Local light field fusion<a href='https://github.com/Fyusion/LLFF'>here</a></p>
             <p>Combining MRF and CNN for image synthesis <a href='https://arxiv.org/pdf/1601.04589.pdf'>here</a></p>
             <p>Markovian Generative Adversarial Network for Pre-computed texture synthesis <a href='https://arxiv.org/pdf/1604.04382.pdf'>here</a></p>
             <br>
