--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
          <p><b>Book in my hand : The count of Monte Cristo </b></p>
          <br />
          <p>This weeks song :</p>
-         <a href="https://www.youtube.com/watch?v=MwpMEbgC7DA" style="color:black;">Tom Odell - Another Love</a>
+         <a href="https://www.youtube.com/watch?v=6zMgQMEqga8" style="color:black;">Jaz Karis - Petty Lover</a>
       </div>
       <!--Deadlines Section on Overhead bar-->
       <div id="Deadlines" class="tabcontent box">
