--- a/index.html
+++ b/index.html
@@ -160,33 +160,29 @@
       <div id="Deadlines" class="tabcontent box">
 
          <div class="sidenav">
-            <a href="#" onclick="today()">September 19 2020</a>
-            <a href="#" onclick="yesterday()">August 2020</a>
+            <a href="#" onclick="today()">Eisenhover matrix</a>
+            <a href="#" onclick="yesterday()">To-do lists</a>
             <a href="#" onclick="projectsNow()">Growing work</a>
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
-               <li><h1>BREATHE : Inhale and Exhale</h1></li>
-               <li>OpSys Assignment and reading material</li>
-               <li>Think about Adv Data Analytics Project</li>
-
                <li>Deep learning wtih Pytorch book Chapter 2 [Continue from 2.2]</li>
                <li>Deep learning 5th module [Experiment with code from practicum-Revision] <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
                <li>[IMP Research Paper] Deep Residual Networks for Image Recognition<a href="https://arxiv.org/pdf/1512.03385.pdf">here</a></li>
                <li>NIPS series - Yoshua Bengio<a href="https://videos.neurips.cc/topic/deep%20learning/video/slideslive-38922794">here</a></li>
-               <li>CNN Stanford course lect-4 <a href="https://www.youtube.com/watch?v=d14TUNcbn1k&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=4">[56min]</a></li>
+
                <br>
                <li>How to train your <a href='https://myrtle.ai/learn/how-to-train-your-resnet-7-batch-norm/'>Resnet-7</a></li>
                <li>Back propogation through time <a href='http://www.wildml.com/2015/10/recurrent-neural-networks-tutorial-part-3-backpropagation-through-time-and-vanishing-gradients/'>sample</a></li>
                <li>[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture <a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[1:30min]</a></li>
                <li>Deep learning Chapter 5</li>
-               <li>Get caught up with OS and quiz</li>
                <li> Start computer vision book[Computer vision : Models, learning and inference]</li>
                <br>
                <li>Harsha Coursera thing - week 4</li>
                <li>Implement code of the paper you read Image generation [DRAW and Audio to video]</li>
                <li>Pick an absurd idea to learn or implement</li>
+               <li>CNN Stanford course lect-4 <a href="https://www.youtube.com/watch?v=d14TUNcbn1k&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=4">[56min]</a></li>
             </ol>
          </div>
          <div id='yestChal' style='display:none'>
