--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
             Marcus Aurelius
          </p>
          <br/>
-         <p><b>Book in my hand : The count of Monte Cristo </b></p>
+         <p><b>Book in my hand : The Untethered Soul. </b></p>
          <br />
          <p>This weeks song :</p>
-         <a href="https://www.youtube.com/watch?v=6zMgQMEqga8" style="color:black;">Jaz Karis - Petty Lover</a>
+         <a href="https://www.youtube.com/watch?v=w-vVSeeCf1k" style="color:black;">FUJII KAZE - Shinunoga E-wa</a>
       </div>
       <!--Deadlines Section on Overhead bar-->
       <div id="Deadlines" class="tabcontent box">
